# Biopython-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.py
biopython_rust/: __init__.py  io.py  seq.py
biopython_rust.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: lib.rs
src/engines/: mod.rs
src/engines/compute/: alignment.rs  mod.rs  string_ops.rs
src/engines/core/: io.rs  memory.rs  mod.rs  new_paralle.rs  parallel.rs  simd.rs
src/engines/storage/: formats.rs  mod.rs
src/modules/: mod.rs
src/modules/IO/: fasta.rs  mod.rs
src/modules/seq/: alphabet.rs  mod.rs  sequence.rs
tests/: test_io.py  test_seq.py
