[package]
name = "biopython_rust"
version = "0.1.0"
edition = "2021"
authors = ["Xuliang Xu <xlxmobile@outlook.com>"]
description = "High-performance bioinformatics sequence operations library"
license = "MIT"

[lib]
name = "biopython_rust"
path = "src/lib.rs"

[dependencies]
rayon = { version = "1.8.0", optional = true }
memmap2 = "0.7.1"
thiserror = "1.0.49"
num_cpus = "1.16.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
parking_lot = "0.12.1"
itertools = "0.11.0"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.0"
rand = "0.8.5"
proptest = "1.2.0"

[features]
default = ["std"]
std = []
parallel = ["rayon"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"